fix: multiline chords overlaps with text

--- a/assets/components/SongItem.scss
+++ b/assets/components/SongItem.scss
@@ -111,7 +111,7 @@
   }
 
   &__line_chords_glue {
-    height: 2em;
+    min-height: 2em;
     margin-bottom: -2.8em;
   }
   &__line_text {
